basic next.js integration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
 
   # 2) FastAPI Application
   api:
-    build: .
+    build: ./backend
     container_name: mvp_api
     depends_on:
       - db
@@ -28,6 +28,13 @@ services:
     ports:
       - "8000:8000"   # Host port : Container port
     # If you need environment variables for summarization or others, add them here.
+
+  frontend:
+    build: ./frontend
+    ports:
+      - "3000:3000"
+    depends_on:
+      - api
 
 volumes:
   postgres_data:
