--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - postgres_data:/var/lib/postgresql/data
 
   # 2) FastAPI Application
-  api:
+  backend:
     build: ./backend
     container_name: mvp_api
     depends_on:
@@ -34,7 +34,18 @@ services:
     ports:
       - "3000:3000"
     depends_on:
-      - api
+      - backend
+
+  nginx:
+    image: nginx:alpine
+    container_name: nginx
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+    ports:
+      - "80:80"
+    depends_on:
+      - backend
+      - frontend
 
 volumes:
   postgres_data:
