--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,12 +1,15 @@
-FROM node:18-alpine AS build
+FROM node:22-alpine
+
 WORKDIR /app
+
 COPY package.json package-lock.json ./
+
 RUN npm install
-COPY . ./
+
+COPY . .
+
 RUN npm run build
 
-FROM node:18-alpine
-WORKDIR /app
-COPY --from=build /app ./
 EXPOSE 3000
+
 CMD ["npm", "start"]
